Fix z-index

--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -24,6 +24,7 @@ body {
     font-size: 14px;
     text-align: center;
     border-radius: 5px;
+    z-index: 10;
 }
 
 #upload:hover {
